--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,7 @@ target/**
 **/*.iml
 **/node_modules
 **/node_modules/**
-**/package_lock.json
+**/package-lock.json
 src/main/frontend/dist
 src/main/frontend/build
 src/main/frontend/dist/**
