--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-codegen</artifactId>
+      <version>${vertx.version}</version>
+      <classifier>processor</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-sockjs-service-proxy</artifactId>
       <version>${vertx.version}</version>
     </dependency>
