Re-generated code from updated specification

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <name>photo-archive</name>
 
     <properties>
-        <main.verticle>com.zanclus.photo.MainVerticle</main.verticle>
+        <main.verticle>com.zanclus.photo.archive.MainVerticle</main.verticle>
         <vertx.version>3.6.2</vertx.version>
         <sonar.organization>infosec812-github</sonar.organization>
         <sonar.projectKey>InfoSec812_photo-archive</sonar.projectKey>
